# hc-forge

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs
.github/workflows/: release-builds.yml
src/: App.vue  main.ts  tailwind.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  validators.rs
src-tauri/src/api/: client.rs  mod.rs
src-tauri/src/api/auth/: credentials.rs
src-tauri/src/api/models/: cce.rs  ecs.rs  eip.rs  evs.rs  iam.rs  ims.rs  mod.rs  nat.rs  obs.rs  vpc.rs
src/components/: AppLogsPanel.vue  ReloadIconButton.vue  SshTerminalPanel.vue  TrashIconButton.vue
src/components/cce/: CceModulePanel.vue
src/components/ecs/: EcsInputsPanel.vue  EcsResponsePanel.vue
src/components/obs/: ObsModulePanel.vue
src/constants/: startupTasks.ts
src/styles/: app.css
src/types/: cce.ts  ecs.ts  obs.ts
src/utils/: platformOps.d.ts  platformOps.js  platformOps.test.mjs
