[package]
name = "hc-forge"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hc_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.101"
chrono = "0.4.43"
hmac = "0.12.1"
reqwest = { version = "0.13.2", features = ["json", "multipart"] }
sha2 = "0.10.9"
hex = "0.4.3"
toml = "0.9.11"
tracing = "0.1.44"
tokio = "1.49.0"
thiserror = "2.0.18"
url = "2.5.8"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
bytes = "1.11.1"
directories = "6.0.0"
rand = "0.9.2"
secrecy = "0.10.3"
csv = "1.3.1"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
