[package]
name = "hc-forge"
version = "0.1.0"
description = "A Huawei Cloud Toolbox with GUI"
authors = ["you"]
edition = "2021"


[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hc_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.101"
chrono = "0.4.43"
hmac = "0.12.1"
reqwest = { version = "0.13.2", features = ["json", "multipart"] }
base64 = "0.22.1"
quick-xml = { version = "0.38.4", features = ["serialize"] }
sha1 = "0.10.6"
sha2 = "0.10.9"
hex = "0.4.3"
toml = "0.9.11"
tokio = "1.49.0"
thiserror = "2.0.18"
url = "2.5.8"
bytes = "1.11.1"
directories = "6.0.0"
rand = "0.9.2"
secrecy = "0.10.3"
csv = "1.3.1"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
russh = "0.57.0"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
moka = { version = "0.12.10", features = ["sync"] }
futures = "0.3.31"
tauri-plugin-os = "2"
